--- a/Views/catalog.html
+++ b/Views/catalog.html
@@ -12,36 +12,62 @@
     <link rel="stylesheet" href="css/bootstrap-icons.css">
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/catalog.js" defer></script>
+
 </head>
 <body>
     
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid d-flex align-items-center justify-content-between">
+            <!-- Logo -->
             <a class="navbar-brand ms-5" href="#">
                 <img id="logo" src="images/logo.png" alt="Logo" width="140" height="50">
             </a>
+    
+            <!-- Toggle button for mobile view -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+    
+            <!-- Navigation Links -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link selected">Home</a>
+                        <a href="/index.html" class="nav-link selected">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Views/contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="../index.html#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Sign up</a>
                     </li>
                 </ul>
             </div>
+    
+            <!-- Search Bar and Cart Icon -->
+    <!-- Search Bar Section -->
+    <div class="">
+        <div class="search-wrapper">
+            <div class="search-box">
+                <input type="text" class="search-input form-control" placeholder="Search anything..." id="search-input">
+                <i class="fas fa-search search-icon"></i>
+            </div>
+        </div>
+    </div>
+                <a href="#" class="navbar-icon ms-3 me-5">
+                    <i class="fas fa-shopping-cart fa-cart-shopping" style="color: #db4444; font-size: 30px;"></i>
+                </a>
+            </div>
         </div>
     </nav>
+
+
+
+
+
 
     <div class="container-fluid">
         <div class="row">
@@ -50,26 +76,28 @@
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" data-category-id="1">All</a>
+                            <a id="all" class="nav-link active selected" href="#" data-category-id="1">All</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-category-id="2">Electronics</a>
+                            <a id="Electronics" class="nav-link" href="#" data-category-id="2">Electronics</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-category-id="3">Clothes</a>
+                            <a id="Clothes" class="nav-link" href="#" data-category-id="3">Clothes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-category-id="4">Furniture</a>
+                            <a id="Furniture" class="nav-link" href="#" data-category-id="4">Furniture</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-category-id="5">Fashion</a>
+                            <a id="Fashion" class="nav-link" href="#" data-category-id="5">Fashion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-category-id="6">MakeUp</a>
+                            <a id="MakeUp" class="nav-link" href="#" data-category-id="6">MakeUp</a>
                         </li>                  
                     </ul>
                 </div>
             </nav>
+
+
 
             <!-- Main content -->
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
@@ -85,7 +113,6 @@
             </main>
         </div>
     </div>
-
     <script type="module" src="js/catalogProduct.js" defer></script>
 </body>
 </html>
