--- a/Views/css/catalog.css
+++ b/Views/css/catalog.css
@@ -1,3 +1,11 @@
+body {
+    border: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 #sidebar {
     min-height: 100vh;
     transition: all 0.3s;
@@ -55,35 +63,3 @@
 
 
 
-
-
-/* cards */
-.card-title {
-    white-space: nowrap; /* eliminate text to jump to new line*/
-    overflow: hidden; /* يخفي النص الزائد */
-    text-overflow: ellipsis; /* يعرض النقاط (...) */
-    cursor: pointer; 
-}
-.card {
-    /* width: 300px; Set card width */
-    height: 350px;
-}
-.card-img-top {
-    height: 150px; /* Set a fixed height */
-    object-fit: cover; /* Maintain aspect ratio */
-}
-.card-footer {
-    background-color: black; /* Change background of button container to black */
-}
-.btn-primary {
-    background-color: white;
-    color: black;
-    border-color: white;
-}
-.btn-primary:hover {
-    background-color: #DB4444; /* Change button color on hover */
-    border-color: #DB4444; /* Change border color on hover */
-}
-.price {
-    color: #DB4444; /* Change price color */
-}
