--- a/Views/checkout.html
+++ b/Views/checkout.html
@@ -12,6 +12,58 @@
     </script>
   </head>
   <body>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div
+        class="container-fluid d-flex align-items-center justify-content-between"
+      >
+        <!-- Logo -->
+        <a class="navbar-brand ms-5" href="#">
+          <img
+            id="logo"
+            src="Images/logo.png"
+            alt="Logo"
+            width="140"
+            height="50"
+          />
+        </a>
+
+        <!-- Toggle button for mobile view -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navigation Links -->
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link selected">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="Views/contact.html" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Log in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <script type="module" src="js/navbar.js"></script>
     <div class="container checkout-container" id="checkoutContainer">
       <div class="container p-5 Steps-bar">
         <div
@@ -38,7 +90,11 @@
           <div class="progress-bar bg-success" style="width: 33.3333%"></div>
         </div>
       </div>
-      <form class="row g-3 needs-validation checkout-form" novalidate>
+      <form
+        class="row g-3 needs-validation checkout-form"
+        novalidate
+        id="checkoutForm"
+      >
         <!-- Deviding the checkout into two rows -->
         <div class="col-12 col-md-6">
           <!-- billing row -->
@@ -126,7 +182,7 @@
               </div>
               <div class="col-12">
                 <label for="country" class="form-label">Country</label>
-                <select class="form-select" id="country2" required>
+                <select class="form-select" id="country" required>
                   <option selected value="Egypt">Egypt</option>
                   <option selected value="Iraq">Iraq</option>
                   <option selected value="Iran">Iran</option>
@@ -273,7 +329,28 @@
         <!-- End of billing col -->
         <div class="col-12 col-md-6">
           <div class="row">
-            <div class="col-12" id="checkoutProducts"></div>
+            <div class="col-12" id="checkoutProducts">
+              <div
+                class="d-flex justify-content-between py-3 border-bottom"
+                id="subTotalRow"
+              >
+                <span>Subtotal</span>
+                <span>$0</span>
+              </div>
+
+              <div class="d-flex justify-content-between py-3 border-bottom">
+                <span>Shipping</span>
+                <span>Free</span>
+              </div>
+
+              <div
+                class="d-flex justify-content-between py-3 border-bottom"
+                id="totalRow"
+              >
+                <span>Total</span>
+                <span>$0</span>
+              </div>
+            </div>
             <button class="btn btn-success col-12" type="submit">
               Submit form
             </button>
@@ -309,122 +386,7 @@
       })();
     </script>
     <script src="js/stepsBar.js"></script>
-    <script>
-      let allCheckoutParts = document.querySelectorAll(".part");
-      let activeStep = document.querySelector(".step .bg-success");
-      let stepsBar = document.querySelector(".Steps-bar");
-      document.querySelector("form").addEventListener("click", (e) => {
-        if (e.target.classList.contains("traverse-btn")) {
-          let moveTo = +e.target.dataset.moveTo;
-          allCheckoutParts.forEach((part, index) => {
-            if (part.classList.contains(`part${moveTo}`)) {
-              part.classList.remove("d-md-none");
-            } else {
-              part.classList.add("d-md-none");
-            }
-          });
 
-          document.getElementById(`step${moveTo}`).click();
-        }
-      });
-      stepsBar.addEventListener("click", (e) => {
-        if (e.target.classList.contains("stepNumber")) {
-          let clickedStep = +e.target.innerText;
-          allCheckoutParts.forEach((part, index) => {
-            if (part.classList.contains(`part${clickedStep}`)) {
-              part.classList.remove("d-md-none");
-            } else {
-              part.classList.add("d-md-none");
-            }
-          });
-        }
-      });
-    </script>
-    <script type="module">
-      import { ProductRepo } from "../Repository/ProductRepo.js";
-      import { ShoppingCartRepo } from "../Repository/ShoppingCartRepo.js";
-
-      let checkoutProducts = document.getElementById("checkoutProducts");
-
-      let cartItems = ShoppingCartRepo.getCartById(2).items;
-      console.log(cartItems);
-      let productsRows = cartItems
-        .map((item) => {
-          return `
-            <div class="checkout-product d-flex align-items-center mb-3">
-              <img src="${ProductRepo.getProductImgPathById(
-                item.productId
-              )}" alt="${
-            item.name
-          }" class="img-thumbnail" style="width: 100px;" />
-              <div class="ms-3">
-                <h5>${item.name}</h5>
-                <p>Quantity: ${item.quantity}</p>
-                <p>Price: $${item.price.toFixed(2)}</p>
-              </div>
-            </div>
-          `;
-        })
-        .join("");
-
-      checkoutProducts.innerHTML = productsRows;
-    </script>
-    <script type="module">
-      import { Helpers } from "../Utils/helpers.js";
-      function CheckValidationStep1() {
-        let firstName = document.getElementById("firstName");
-        let lastName = document.getElementById("lastName");
-        let email = document.getElementById("email");
-        let phone = document.getElementById("phone");
-        let part1Next = document.getElementById("part1Next");
-
-        function checkNameInput(value) {
-          if (Helpers.isNotNullOrEmpty(value)) {
-            return {
-              result: false,
-              message: "Name is required it can't be empty string.",
-            };
-          } else if (Helpers.isOnlyText(value)) {
-            return { result: false, message: "Name can't contain numbers" };
-          } else if (!Helpers.stringLengthGOrEqual(value, 3)) {
-            return {
-              result: false,
-              message: "Name should be at least 3 characters long.",
-            };
-          } else {
-            return { result: true, message: "Name is valid" };
-          }
-        }
-
-        function checkPhoneInput(value) {
-          if (Helpers.isPhoneNumber(value)) {
-            return { result: true, message: "Phone number is valid" };
-          } else {
-            return { result: false, message: "Phone number is not valid" };
-          }
-        }
-
-        function checkEmailInput(value) {
-          if (Helpers.isEmail(value)) {
-            return { result: true, message: "Email is valid" };
-          } else {
-            return { result: false, message: "Email is not valid" };
-          }
-        }
-
-        let firstNameResult = checkNameInput(firstName.value);
-        let lastNameResult = checkNameInput(lastName.value);
-        let emailResult = checkEmailInput(email.value);
-        let phoneResult = checkPhoneInput(phone.value);
-      }
-
-      function CheckValidationStep2() {}
-      function CheckValidationStep3() {
-        let paymentMethod = document.querySelector(
-          'input[name="paymentMethod"]:checked'
-        );
-        let part3Next = document.getElementById("part3Next");
-      }
-    </script>
+    <script type="module" src="js/checkout.js"></script>
   </body>
 </html>
