--- a/Views/ProductDetails.html
+++ b/Views/ProductDetails.html
@@ -6,8 +6,11 @@
     <title>Product Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" src="./ProductDetails.css">
-    <link rel="stylesheet" src="./footer.css">
+    <link rel="stylesheet" src="css/ProductDetails.css">
+    <link rel="stylesheet" href="css/footer.css" >
+    <link rel="stylesheet" href="css/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <!-- <link rel="stylesheet" src="./Views/css/home.css"> -->
      <style>
         #Delivery{
@@ -25,36 +28,55 @@
 <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
-            <!-- Logo -->
-            <a class="navbar-brand ms-5" href="#">
-                <img id="logo" src="images/logo.png" alt="Logo" width="140" height="50">
-            </a>
-    
-            <!-- Toggle button for mobile view -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <!-- Navigation Links -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link selected">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="Views/contact.html" class="nav-link">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Sign up</a>
-                    </li>
-                </ul>
-            </div> 
+        <div
+          class="container-fluid d-flex align-items-center justify-content-between"
+        >
+          <!-- Logo -->
+          <a class="navbar-brand ms-5" href="/index.html">
+            <img
+              id="logo"
+              src="Images/logo.png"
+              alt="Logo"
+              width="140"
+              height="50"
+            />
+          </a>
+  
+          <!-- Toggle button for mobile view -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <!-- Navigation Links -->
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="/index.html" class="nav-link ">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="contact.html" class="nav-link">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a href="#about" class="nav-link">About</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
+
+      
+
     <div class="container mt-5" id="container">
         <div class="row">
             <!-- Product Images -->
@@ -91,7 +113,7 @@
                         <i class="bi bi-cart-plus"></i> Add to Cart
                     </button>
                 </div>
-                <div class="mt-4" id="Delivery">
+                <div class="mt-4 mb-4" id="Delivery">
                     <div class="d-flex align-items-center">
                         <i class="bi bi-truck icon"></i>
                         <div>
@@ -111,6 +133,24 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
 <footer class="footer">
     <div class="container">
