--- a/Views/checkout.html
+++ b/Views/checkout.html
@@ -51,21 +51,18 @@
               <a href="index.html" class="nav-link selected">Home</a>
             </li>
             <li class="nav-item">
-              <a href="Views/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
               <a href="#about" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Log in</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <script type="module" src="js/navbar.js"></script>
+    <script type="module" src="js/checkoutNavbar.js"></script>
     <div class="container checkout-container" id="checkoutContainer">
-      <div class="container p-5 Steps-bar">
+      <div class="container p-5 Steps-bar mb-5">
         <div
           class="progress"
           role="progressbar"
@@ -96,7 +93,7 @@
         id="checkoutForm"
       >
         <!-- Deviding the checkout into two rows -->
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 pe-md-3">
           <!-- billing row -->
           <div class="part1 part d-block">
             <h3>Billing Details</h3>
@@ -327,7 +324,7 @@
           <!-- End of part 3 -->
         </div>
         <!-- End of billing col -->
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 ps-md-3">
           <div class="row">
             <div class="col-12" id="checkoutProducts">
               <div
